add stale header to deployments in edit mode

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -540,6 +540,8 @@
         "visibility-private-tooltip": "Your deployment is private and not reachable on the internet. Only internal traffic is allowed in (traffic between deployments).",
         "visibility-auth-tooltip": "Your deployment is private and reachable on the internet through an authentication proxy, this limits the allowed traffic.",
         "stale": "Stale",
-        "stale-description": "This resource hasn't been accessed by its owner for more than or equal to 3 months."
+        "stale-description": "This resource hasn't been accessed by its owner for more than or equal to 3 months.",
+        "stale-and-disabled-description": "This resource has been disabled due to inactivity. Please contact the resource owner to log in and restore access.",
+        "stale-and-not-disabled-description": "Due to prolonged inactivity, this resource will be disabled soon."
     }
 }
