--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -538,7 +538,9 @@
         "visibility-public-tooltip": "Din deployment är publikt åtkomlig på internet.",
         "visibility-private-tooltip": "Din deployment är privat och inte åtkomlig på internet. Enbart intern trafik mellan appar är tillåten.",
         "visibility-auth-tooltip": "Din deployment är privat och åtkomlig på internet via en autentiserings-proxy, detta begränsar tillåten trafik.",
-        "stale": "Föråldrad",
-        "stale-description": "Denna resurs har inte åtkommits av dess ägare under mer än eller lika med 3 månader."
+        "stale": "Inaktiv",
+        "stale-description": "Denna resurs har inte åtkommits av dess ägare under mer än eller lika med 3 månader.",
+        "stale-and-disabled-description": "Denna resurs har inaktiverats på grund av inaktivitet. Kontakta resursägaren för att logga in och återställa åtkomsten.",
+        "stale-and-not-disabled-description": "På grund av långvarig inaktivitet kommer denna resurs att inaktiveras inom en snar framtid."
     }
 }
