--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -542,6 +542,10 @@
         "stale": "Stale",
         "stale-description": "This resource hasn't been accessed by its owner for more than or equal to 3 months.",
         "stale-and-disabled-description": "This resource has been disabled due to inactivity. Please contact the resource owner to log in and restore access.",
-        "stale-and-not-disabled-description": "Due to prolonged inactivity, this resource will be disabled soon."
+        "stale-and-not-disabled-description": "Due to prolonged inactivity, this resource will be disabled soon.",
+        "stale-soon": "Stale soon",
+        "stale-soon-description": "This resource will become stale soon due to inactivity from the owner",
+        "stale-in": "Stale in",
+        "days-left": "days left"
     }
 }
