host admin page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -549,6 +549,8 @@
         "days-left": "days left",
         "never-stale-option-header": "Always Active Option",
         "never-stale-option-header-subheader": "Control whether this resource should remain active despite inactivity.",
-        "never-stale": "Always Active"
+        "never-stale": "Always Active",
+        "error-could-not-fetch-hosts": "Could not fetch hosts",
+        "error-could-not-fetch-system-capacities": "Could not fetch system capacities"
     }
 }
