--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -550,6 +550,8 @@
         "never-stale-option-header-subheader": "Styr om denna resurs ska förbli aktiv trots inaktivitet.",
         "never-stale": "Alltid aktiv",
         "error-could-not-fetch-hosts": "Kunde inte hämta värdmaskiner",
-        "error-could-not-fetch-system-capacities": "Kunde inte hämta kapaciteten hos systemet"
+        "error-could-not-fetch-system-capacities": "Kunde inte hämta kapaciteten hos systemet",
+        "unschedulable": "O-Schemaläggningsbar",
+        "schedulable": "Schemaläggningsbar"
     }
 }
